<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socket.IO Chat Demo</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="welcom_to_join">Welcome to join %s</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="your_account_is_temporarily_blocked">Your account is temporary blocked</string>
    <string name="plz_contact_us_to_discuss_the_matter">Please contact us at kieuducthang@gmail.com to discuss the matter</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="email_address_cannot_be_empty">Email address cannot be empty</string>
    <string name="email_address_is_not_valid">Email address is not valid</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="plz_accept_the_needed_permission_first">Please accept the needed permission first</string>

    <string name="loading">Loading…</string>
    <string name="ok">OK</string>

    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_mail_using">Send mail using</string>
    <string name="network_is_not_available">Network is not available</string>
    <string name="no_email_client_installed">No email client installed</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="your_account_is_temporarily_deleted">Your account temporarily deleted</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong. Please try again later</string>
    <string name="register_user_successfully">Register user successfully</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name_cannot_be_empty">First name cannot be empty</string>
    <string name="last_name_cannot_be_empty">Last name cannot be empty</string>
    <string name="no_account_create_new"><u>No Account? Create New</u></string>
    <string name="go_to_login"><u>Go to Login</u></string>
    <string name="hint_room_name">Enter room name</string>
    <string name="create_and_join"><![CDATA[Create & Join]]></string>
    <string name="chat">Chat</string>
    <string name="your_message">Your message</string>
    <string name="room_name_cannot_be_empty">Room name cannot be empty</string>
    <string name="user_name_is_typing">%s is typing…</string>
    <string name="number_onlines">%d Online</string>
</resources>